Fix alignment issues

--- a/src/sentry/static/sentry/less/sentry-list-group.less
+++ b/src/sentry/static/sentry/less/sentry-list-group.less
@@ -32,13 +32,13 @@
     }
 
     .list-group-avatar {
-      padding-left: 56px;
+      padding-left: 60px;
       position: relative;
 
       .avatar {
         .square(36px);
         position: absolute;
-        left: 10px;
+        left: 15px;
         border-radius: 3px;
       }
     }
