--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -2717,6 +2717,7 @@ ul.faces {
 .repo-label {
   .label;
   display: inline-block;
+  vertical-align: text-bottom;
   padding: 4px 8px 6px;
   line-height: 1;
   background: @40;
